# Edifice_V2

./: CMakeLists.txt  ReadMe.txt  ToDo.txt  debug  frameManager  main.c  tikManager
ArrayList/: ArrayList.h  arrayList.c
Assets/: AssetManager.c  AssetManager.h  Load1.aseprite  NorthEast.aseprite  NorthWest.aseprite  SouthWest.aseprite  SpriteSheet.aseprite
Assets/Aseprite/: Crate.aseprite  East.aseprite  Incerter.aseprite  ItemRecipies.aseprite  convador belt.aseprite  puff.aseprite
Assets/Sapian Animations/: Man.aseprite  North.aseprite  South.aseprite  SouthEast.aseprite  West.aseprite
Assets/Sounds/: Obsidian.lnk
Game/: GameData.c  GameData.h
Game/Blocks/: Blocks.c  Blocks.h
Game/Controls/: Controls.c  Controls.h
Game/Debuging/: Test_Main.c  Test_Main.h
Game/Debuging/DebugMenu/: DebugMenu.c  DebugMenu.h
Game/Debuging/DebugMenu/Consol/: DebugConsole.c  DebugConsole.h
Game/Debuging/DebugMenu/FrameRenderingData/: FrameRenderingData.c  FrameRenderingData.h
Game/Debuging/DebugMenu/TikData/: TickData.c  TickData.h
Game/InGameTime/: TikManager.c  TikManager.h
Game/InGameTime/Drone/: Drone.c  Drone.h  DroneData.c  DroneData.h
Game/InGameTime/Drone/DroneBlockProperties/: DroneBlockProperties.c  DroneBlockProperties.h
Game/InGameTime/Drone/DroneCraftingManager/: DroneCraftingManager.c  DroneCraftingManager.h
Game/InGameTime/Drone/DroneInventoryManager/: DroneInventoryManager.c  DroneInventoryManager.h
Game/InGameTime/Drone/DroneItemManager/: DroneItemManager.c  DroneItemManager.h
Game/InGameTime/Drone/DroneLuaCommands/: DroneLuaCommands.c  DroneLuaCommands.h
Game/InGameTime/Drone/DroneLuaCommands/DroneFurnaceLuaCommands/: DroneFurnaceLuaCommands.c  DroneFurnaceLuaCommands.h
Game/InGameTime/Drone/DroneToolManager/: DroneToolManager.c  DroneToolManager.h
Game/InGameTime/Furnace/: Furnace.c  Furnace.h  FurnaceData.c  FurnaceData.h
Game/InGameTime/TikEvent/: TikEvent.c  TikEvent.h
Game/InGameTime/TikEvent/EntityManager/: EntityManager.c  EntityManager.h  PuffLogic.c  PuffLogic.h
Game/InGameTime/TikEvent/EntityManager/Puff/: PuffLogic.c  PuffLogic.h
Game/InGameTime/TikEvent/TerpManager/: TerpManager.c  TerpManager.h
Game/PlayerData/: PlayerData.c  PlayerData.h
Game/PlayerData/Invintory/BlockMenu/: BlockMenu.c  BlockMenu.h
Game/PlayerData/Invintory/Hotbar/: Hotbar.c  Hotbar.h
Game/Sound/: SoundManager.c  SoundManager.h
Game/Visuals/: Screen.c  Screen.h
Game/Visuals/Camera/: Camera.c  Camera.h  CameraData.c  CameraData.h
Game/Visuals/Camera/ChunkMap/: ChunkMap.c  ChunkMap.h
Game/Visuals/Camera/ChunkMap/ChunkLinkList/: ChunkLinkList.c  ChunkLinkList.h
Game/Visuals/Camera/Controls/: CameraControls.c  CameraControls.h
Game/Visuals/Camera/IsoCordTool/: IsoCordManager.c  IsoCordManager.h
Game/Visuals/Camera/Rendering/CastedBlockManager/: CastedBlockManager.c  CastedBlockManager.h
Game/Visuals/Camera/Rendering/CastedBlockManager/CastedBlockHighLighter/: CastedBlockHighLighter.c  CastedBlockHighLighter.h
Game/Visuals/Camera/Rendering/CastedBlockManager/ChunkMap/: ChunkMap.c  ChunkMap.h
Game/Visuals/Camera/Rendering/CastedBlockManager/TextureList/: TextureList.c  TextureList.h
Game/Visuals/Camera/Rendering/CastedBlockRendering/: CastedBlockRendering.c  CastedBlockRendering.h
Game/Visuals/Camera/Rendering/EntityRendering/: EntityRendering.c  EntityRendering.h
Game/Visuals/Camera/Rendering/RayCasting/: RayCaster.c  RayCaster.h  RayCastingManager.c  RayCastingManager.h
Game/Visuals/Camera/Rendering/RayCasting/CastingThread/: castingThread.c  castingThread.h
Game/Visuals/Camera/Rendering/RayCasting/GPUCasting/: GPUCastingManager.c  GPUCastingManager.h
Game/Visuals/Camera/Rendering/TextureManager/: EntityTextures.c  EntityTextures.h  IsoTextureManager.c  IsoTextureManager.h
Game/Visuals/Consol/: Consol.c  Consol.h
Game/Visuals/InMenuWindow/: InMenuWindow.c  InMenuWindow.h
Game/Visuals/Menu/: Menu.c  Menu.h
Game/Visuals/Menu/Button/: Button.c  Button.h
Game/Visuals/Menu/DroneOnScreenUI/: DroneOnScreenUI.c  DroneOnScreenUI.h
Game/Visuals/Menu/DroneOnScreenUI/DronePopOutWindow/: DronePopOutWindow.c  DronePopOutWindow.h
Game/Visuals/Menu/DroneOnScreenUI/GameSpeedControls/: GameSpeedControls.c  GameSpeedControls.h
Game/Visuals/Menu/MenuManager/: MenuManger.c  MenuManger.h
Game/Visuals/Menu/MenuManager/ UIManager/: UIManger.c  UIManger.h
Game/Visuals/Menu/MenuManager/ UIManager/Button/: Button.c  Button.h
Game/Visuals/Menu/MenuManager/ UIManager/UIRenderer/: UIRenderer.c  UIRenderer.h
Game/Visuals/Menu/MenuManager/Menus/MainMenu/: MainMenu.c  MainMenu.h
Game/Visuals/Menu/MenuManager/Menus/SettingsMenu/: SettingsMenu.c  SettingsMenu.h
Game/Visuals/Menu/OnScreenUI/: OnScreenUI.c  OnScreenUI.h
Game/Visuals/Menu/TextManager/: TextManager.c  TextManager.h
Game/Visuals/Menu/UI Controls/: UIControls.c  UIControls.h
Game/World/: World.c  World.h
Game/World/Octree/: AdvancedKeyMod.h  KeyMod.c  KeyMod.h  Octree.c  Octree.h  OctreeNode.c  OctreeNode.h
Game/World/Octree/OctreeBranchPool/: OctreeNodePool.c  OctreeNodePool.h
Game/World/Octree/Tools/: AdvancedKeyMod.c  KeyMod.c  KeyMod.h
Game/World/TerrainGen/: TerrainGen.c  TerrainGen.h
Game/World/TerrainGen/HillManager/: HillManager.c  HillManager.h
Game/World/TerrainGen/LairManager/: LairManager.c  LairManager.h
Game/World/TerrainGen/Perlin Noise/: PerlinGenerator.c  PerlinGenerator.h  PerlinNoise.c  PerlinNoise.h
Game/World/TerrainGen/PlantManager/: PlantManager.c  PlantManger.h
Game/World/TerrainGen/StoneManager/: StoneManager.c  StoneManager.h
Game/World/TerrainGen/WaterGen/: WaterGen.c  WaterGen.h
Game/World/World Saving/: WorldFileManager.c  WorldFileManager.h
Game/World/World Saving/ChunkFileManager/: ChunkFileManager.c  ChunkFileManager.h
Game/World/WorldChunk/: WorldChunk.c  WorldChunk.h
Game/World/WorldChunk/WorldChunkEntityHashMap/: WorldChunkEntityHashMap.c  WorldChunkEntityHashMap.h
Game/World/WorldChunkHashMap/: WorldChunkHashMap.c  WorldChunkHashMap.h
(+10 files in other folders)
